FEAT: styled drop down

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -11,6 +11,7 @@
 @import "calendar";
 @import "card";
 @import "container";
+@import "dropdown";
 @import "events";
 @import "file_input";
 @import "form";
