--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,7 +17,7 @@
                 <% if current_user.first_name.present? %>
                   <p><%= current_user.first_name[0].upcase %></p>
                 <% else %>
-                  <p>M</p>
+                  <p class="pl-3">M</p>
                 <% end %>
               </div>
             <% else %>
