--- a/app/views/events/show/_event_organiser.html.erb
+++ b/app/views/events/show/_event_organiser.html.erb
@@ -19,20 +19,20 @@
             </div>
 
             <!-- Organiser rating -->
-            <div class="organiser-rating-box">
+            <%# <div class="organiser-rating-box">
                 <div class="rating-section d-flex">
                     <div class="organiser-rating pr-2">4</div>
                     <span class="total-rating-score">/5</span>
                 </div>
                 <div>
-                    <% 4.to_i.times do  %>
-                        <span class="review-star"><i class="fas fa-star solid"></i></span>
-                    <% end %>
-                    <% 1.to_i.times do  %>
-                        <span class="blank-star"><i class="far fa-star regular"></i></span>
-                    <% end %>
-                </div>
-            </div>
+                    <%# 4.to_i.times do  %>
+                        <%# <span class="review-star"><i class="fas fa-star solid"></i></span> %>
+                    <%# end %>
+                    <%# 1.to_i.times do  %>
+                        <%# <span class="blank-star"><i class="far fa-star regular"></i></span> %>
+                    <%# end %>
+                <%# </div> %>
+            <%# </div> %>
         </div>
 
         </div>
