--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
               <% if @user.first_name.present? %>
                 <p><%= @user.first_name[0].upcase %></p>
               <% else %>
-                <p>M</p>
+                <p class="pl-3">M</p>
               <% end %>
             </div>
           <% else %>
