--- a/app/views/shared/avatars/_avatar_sidebar.html.erb
+++ b/app/views/shared/avatars/_avatar_sidebar.html.erb
@@ -21,8 +21,8 @@
           <% end %>
         </div>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <%= link_to "Profile", user_path(current_user.id), class: "dropdown-item" %>
-          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+          <%= link_to "PROFILE", user_path(current_user.id), class: "dropdown-item" %>
+          <%= link_to "LOG OUT", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
         </div>
       </div>
       <div>
