FEAT: activity-card and seed updates

--- a/app/views/activities/_featured_activities.html.erb
+++ b/app/views/activities/_featured_activities.html.erb
@@ -1,7 +1,7 @@
 <div>
   <div class="container__featured">
     <div class="featured-title">
-      <h2>TOP ACTIVITIES</h2>
+      <h2>POPULAR ACTIVITIES</h2>
     </div>
       <div class="card__grid">
           <% activities.each do |activity| %>
