--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -5,4 +5,4 @@
   <%#= render 'shared/search/search_activities' %>
 </div> -->
 
-<%= render 'all_activities', activities: @activities.most_popular_activities[3..@activities.count] %>
+<%= render 'all_activities', activities: @activities %>
