FEAT: added uppercase styling

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -4,9 +4,10 @@
     border-color: $teal;
     color: $almost-white;
     // Font
-    font-size: 14px;
+    font-size: 0.7rem;
     font-weight: 600;
-    letter-spacing: 0.05em;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
     // Spacing
     padding: 8px 24px 8px 24px;
     margin: 0px;
@@ -27,9 +28,10 @@
     border-color: $teal;
     color: $teal;
     // Font
-    font-size: 14px;
+    font-size: 0.7rem;
     font-weight: 600;
-    letter-spacing: 0.05em;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
     // Spacing
     padding: 8px 24px 8px 24px;
     margin: 0px;
