--- a/app/views/activities/show/_location_activities.html.erb
+++ b/app/views/activities/show/_location_activities.html.erb
@@ -1,6 +1,6 @@
 <div class="page-container">
-    <div class="upcoming-event-title">
-        <h2>Top Locations for <%= activity.title %></h2>
+    <div class="featured-title-home">
+        <h2>TOP LOCATIONS FOR <%= activity.title.upcase %></h2>
     </div>
 
     <div class="">
