--- a/app/views/events/show/_event_organiser.html.erb
+++ b/app/views/events/show/_event_organiser.html.erb
@@ -1,5 +1,5 @@
 <div class="horizontal-divider"></div>
-    <h4>About the organiser</h4>
+    <h4 class="title-up">ABOUT THE ORGANISER</h4>
     <div>
         <div class="organiser-info-header d-flex mb-3">
 
