--- a/app/views/events/show/_event_title.html.erb
+++ b/app/views/events/show/_event_title.html.erb
@@ -1,6 +1,6 @@
 <!-- EVENT TITLE -->
 <div class="main-title">
-    <h1><%= event.title %></h1>
+    <h1 class="event-title"><%= event.title %></h1>
     <div class="js-heart-event heart-fit">
         <%= render 'shared/components/heart', element: event %>
     </div>
