--- a/app/views/locations/by_location/_upcoming_events.html.erb
+++ b/app/views/locations/by_location/_upcoming_events.html.erb
@@ -1,6 +1,6 @@
 <div class="page-container">
-    <div class="upcoming-event-title">
-        <h2>Upcoming events in <%= location.city %></h2>
+    <div class="featured-title-home">
+        <h2>UPCOMING EVENTS IN <%= location.city.upcase %></h2>
     </div>
     <div class="container__dashboard">
 
