--- a/app/views/shared/components/_heart.html.erb
+++ b/app/views/shared/components/_heart.html.erb
@@ -2,14 +2,14 @@
   <%= link_to favorites_path(element, favorite: { favoritable_id: element.id, favoritable_type: element.class }), method: :patch, remote: true do %>
     <div class="d-flex mt-3">
       <i class="fas fa-heart mt-1"></i>
-      <p class="ml-3">Saved!</p>
+      <p class="ml-3 event-save">SAVED!</p>
     </div>
   <% end %>
 <% else %>
   <%= link_to favorites_path(element, favorite: { favoritable_id: element.id, favoritable_type: element.class }), method: :patch, remote: true do %>
     <div class="d-flex mt-3">
       <i class="far fa-heart mt-1"></i>
-      <p class="ml-3">Save</p>
+      <p class="ml-3 event-save">SAVE</p>
     </div>
   <% end %>
 <% end %>
