--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="main-title-width-reduced">
-    <h1>Update your trip</h1>
+    <h1 class="form-large-title">UPDATE YOUR TRIP</h1>
     <p>You're going on an adventure!</p>
     <div class="breadcrumb">
         <%= link_to trips_path(@trip) do %>
