--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,5 +1,5 @@
 <div class="main-title-width-reduced">
-    <h1>Create a new travel plan</h1>
+    <h1 class="form-large-title">CREATE A NEW TRAVEL PLAN</h1>
     <p>You're going on an adventure!</p>
     <div class="breadcrumb">
         <%= link_to dashboards_path do %>
