--- a/app/views/trips/show/_trip_events.html.erb
+++ b/app/views/trips/show/_trip_events.html.erb
@@ -16,7 +16,7 @@
           <div class="data-table-grouped">
             
             <div class="data-table-date-header">
-              <h5><%= eventgroup[0].strftime("%d %b %Y") %></h5>
+              <h2 class="featured-time"><%= eventgroup[0].strftime("%d %b %Y") %></h2>
             </div>
             <% eventgroup[1].each do |event| %>
               <div class="data-table">
