--- a/app/assets/stylesheets/components/_approval.scss
+++ b/app/assets/stylesheets/components/_approval.scss
@@ -25,7 +25,7 @@
 
 .table-header {
     p {
-        font-size: 16px;
+        font-size: 0.7;
         font-weight: 600;
         color: $gray;
     }
