--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,6 +2,7 @@
     height: 100%;
     width: 100%;
     background-image: linear-gradient(35deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.8) 80%);
+
     background-size: cover;
     background-position: center;
 }
@@ -17,10 +18,13 @@
     text-align: center;
     .main-title, h1 {
         margin-right: 12rem;
+        text-transform: uppercase;
+        letter-spacing: 0.2rem;
+        font-size: 2.4rem;
     }
     p {
         color: $lightish-gray;
-        font-size: 4rem;
+        font-size: 3rem;
         font-family: Lato;
         font-weight: 300;
         text-shadow: 2px 8px 6px rgba(3, 32, 44, 0.4),
@@ -52,7 +56,7 @@
             margin-right: 0;
         }
         p {
-            font-size: 3rem;
+            font-size: 2rem;
             padding: 0 
         }
     }
