--- a/app/assets/stylesheets/components/_events.scss
+++ b/app/assets/stylesheets/components/_events.scss
@@ -9,6 +9,15 @@
     filter: brightness(60%);
 }
 
+.event-title {
+    font-size: 2rem;
+}
+
+.event-save {
+    font-size: 0.8rem;
+    margin-top: 0.2rem;
+}
+
 .events__upcoming {
     padding: 32px 32px 32px 32px;
 }
@@ -168,6 +177,16 @@
         font-weight: 600;
         padding-bottom: 8px;
     }
+}
+
+.featured-time {
+    color: #007880;
+    font-size: 1rem;
+    font-weight: 600;
+    margin-top: 2rem;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
+    margin-bottom: 2rem;
 }
 
 // Smallest device
