--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -12,6 +12,12 @@
 // UTILITY
 //////////////////////////////////////////////////
 
+.form-large-title {
+  margin-top: 3rem;
+  font-size: 2rem;
+  letter-spacing: 0.2rem;
+}
+
 .form-media-grid {
   display: flex;
 }
