--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -54,9 +54,10 @@
 .dash-inner-nav {
   background-color: transparent;
   // Font
-  font-size: 14px;
+  font-size: 0.8rem;
   font-weight: 500;
-  letter-spacing: 0.05em;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
   // Spacing
   padding: 8px 0 8px 0;
   margin: 0 40px 0 0;
