--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -27,8 +27,10 @@
     color: $light-teal;
     padding-bottom: 8px;
     h2 {
-        font-size: 40px;
-        font-weight: 200;
+        font-size: 2.2rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        letter-spacing: 0.2rem;
         text-shadow: 2px 8px 6px rgba(3, 32, 44, 0.4),
         0px -5px 35px rgba(255,255,255,0.3);
     }
@@ -87,8 +89,9 @@
 
 
 // Smallest device
-@media (max-width: 575px) {
+@media (max-width: 1000px) {
     .search-banner-text {
+        text-align: center;
         h1 {
             font-size: 2rem;
             margin-bottom: 1.6rem;
