--- a/app/views/events/show/_event_description.html.erb
+++ b/app/views/events/show/_event_description.html.erb
@@ -7,7 +7,7 @@
             <div class="event-banner-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path event.location.photo.key %>')"></div>
         <% end %>
     <!-- Placeholder! Carousel of Event Images -->
-    <h4>Event description</h4>
+    <h4 class="title-up">EVENT DESCRIPTION</h4>
 
     <p><%= event.description %></p>
     <div class="">
