--- a/app/views/shared/components/_event_registration_header.html.erb
+++ b/app/views/shared/components/_event_registration_header.html.erb
@@ -1,7 +1,7 @@
 <div class="approval-row approval-header align-items-center mt-5">
-    <div class="table-header"><p>Requester</p></div>
-    <div class="table-header"><p>Event</p></div>
-    <div class="table-header"><p>Requested Date</p></div>
-    <div class="table-header"><p>Status</p></div>
+    <div class="table-header"><p class="title-up">REQUESTER</p></div>
+    <div class="table-header"><p class="title-up">EVENT</p></div>
+    <div class="table-header"><p class="title-up">REQUESTED</p></div>
+    <div class="table-header"><p class="title-up">STATUS</p></div>
     <div class="table-header"><p></p></div>
 </div>
