--- a/app/views/trips/index/_latest_trips.html.erb
+++ b/app/views/trips/index/_latest_trips.html.erb
@@ -1,6 +1,6 @@
 <div class="container__body">
   <div class="featured-title">
-    <h2>Latest</h2>
+    <h2>LATEST</h2>
   </div>
   <div class="">
     <!-- Card Carousel (?) -->
