--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,8 @@
 <div class="container-login">
 
-  <div class="login-image">
+  <div class="login-image" style="background-image: linear-gradient(rgba(0,0,0,0.3),
+    rgba(0,0,0,0.3)),
+    url('<%= cl_image_path Activity.background_image %>')">
   </div>
 
   <div class="login-text m-5">
