--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -42,6 +42,9 @@
         <%= render partial: 'shared/components/sidebar_links',
           locals: { link_text: 'FIND ACTIVITIES', path: activities_path }
         %>
+        <%= render partial: 'shared/components/sidebar_links',
+          locals: { link_text: 'FIND DESTINATIONS', path: locations_path }
+        %>
 
         <% if user_signed_in? %>
           <%= render partial: 'shared/components/sidebar_links',
