--- a/app/views/trips/_event_fields.html.erb
+++ b/app/views/trips/_event_fields.html.erb
@@ -10,8 +10,8 @@
 <%# </div> %>
 
 <!-- TITLE -->
-<div class='nested-fields mt-5'>
-  <div class="">
+<div class='nested-fields my-5'>
+  <div class="mb-5">
     <h5>Add a new event</h5>
     <p>Draft the most amazing description to attract fellow travellers to join</p>
   </div>
@@ -58,7 +58,7 @@
           </div>
         </li>
         <!-- FORM SECTION 2: EXTRA INFO -->
-        <li class="step">
+        <li class="step mt-5">
           <div class="step-title">
             <h5>Add some colour to your event</h5>
             <div class="step-number">
@@ -107,7 +107,7 @@
           </div>
         </li>
         <!-- FORM SECTION 3: PHOTOS -->
-          <li class="step">
+          <li class="step mt-5">
             <div class="step-title">
               <h5>Upload a photo (optional)</h5>
               <div class="step-number">
