FEAT: added google photos for new events / trips with new locations

--- a/app/views/locations/by_location/_featured_location.html.erb
+++ b/app/views/locations/by_location/_featured_location.html.erb
@@ -7,7 +7,7 @@
     <div class="">
       <!-- Card Carousel -->
       <div class="card__grid">
-        <% @locations.sort_by_events.first(3).each do |location| %>
+        <% @all_locations.sort_by_events.first(3).each do |location| %>
           <%= render 'shared/cards/location_card', element: location %>
         <% end %>
       </div>
