--- a/app/views/locations/by_location/_non_featured_locations.html.erb
+++ b/app/views/locations/by_location/_non_featured_locations.html.erb
@@ -7,7 +7,7 @@
     <div class="">
       <!-- Card Carousel -->
       <div class="card__grid">
-        <% @locations.each do |location| %>
+        <% @all_locations.each do |location| %>
           <%= render 'shared/cards/location_card', element: location %>
         <% end %>
       </div>
