FEAT: added google photos and google geocoding to events and locations

--- a/app/views/events/show/_event_description.html.erb
+++ b/app/views/events/show/_event_description.html.erb
@@ -22,7 +22,7 @@
         </p>
         <p>
             <i class="fas fa-map-marker-alt pr-1"></i>
-            <%= event.location.city %>, <%= event.location.country %>
+            <%= event.address %>
         </p>
     </div>
 </div>
