FEAT: select2 added to trip & event form

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -22,6 +22,7 @@
 @import "navbar";
 @import "pill";
 @import "search";
+@import "select";
 @import "sidebar";
 @import "stepper";
 @import "table";
