--- a/app/views/events/show/_event_description.html.erb
+++ b/app/views/events/show/_event_description.html.erb
@@ -10,6 +10,13 @@
     <h4 class="title-up">EVENT DESCRIPTION</h4>
 
     <p><%= event.description %></p>
+
+    <div class="my-3">
+        <% event.activities.each do |activity| %>
+            <%= link_to activity.title, activity_path(activity), class: 'btn btn-filled' %>
+        <% end %>
+    </div>
+
     <div class="">
         <p>
             <i class="far fa-calendar-alt pr-1"></i>
