--- a/app/views/activities/show/_event_activities.html.erb
+++ b/app/views/activities/show/_event_activities.html.erb
@@ -1,7 +1,7 @@
 <div class="top__ten">
-    <div class="container__featured pt-3">
+    <div class="container__featured py-4">
         <div class="featured-title-home">
-            <h2>UPCOMING <%= activity.title.upcase %> EVENTS</h2>
+            <h2><%= title %></h2>
         </div>
 
         <div class="card__grid">
@@ -42,3 +42,4 @@
 
     </div>
 </div>
+
