--- a/app/views/activities/show/_location_activities.html.erb
+++ b/app/views/activities/show/_location_activities.html.erb
@@ -1,4 +1,4 @@
-<div class="page-container">
+<div class="page-container mb-5">
     <div class="featured-title-home">
         <h2>TOP LOCATIONS FOR <%= activity.title.upcase %></h2>
     </div>
@@ -12,5 +12,3 @@
         </div>
     </div>
 </div>
-
-<div class="page-bottom-spacer"></div>
