--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <meta name="description" content="<%= meta_description %>">
     <%= favicon_link_tag %>
 
+    <link rel="manifest" href="/manifest.json">
     
     <!-- Facebook Open Graph data -->
     <meta property="og:title" content="<%= meta_title %>" />
