FIX: cl_image update

--- a/app/views/shared/cards/_event_card.html.erb
+++ b/app/views/shared/cards/_event_card.html.erb
@@ -5,8 +5,8 @@
             <% if element.photos.attached? %>
                 <%= cl_image_tag element.photos.sample.key, class: "photo-card"%>
             <% else %>
-                <% if element.location.photo.present? %>
-                    <%= image_tag element.location.photo, class: "photo-card" %>
+                <% if element.location.photo.attached? %>
+                    <%= cl_image_tag element.location.photo.key, class: "photo-card" %>
                 <% else %>
                     <%= image_tag ("https://images.unsplash.com/photo-1502920514313-52581002a659?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1647&q=80"), class: "photo-card" %>
                 <% end %>
