FEAT: added slider on location show and added multiple location images per location

--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -5,6 +5,8 @@
     } 
 %>
 
+<%= render partial: 'shared/cards/card_carousel', locals: { element: @location } %>
+
 <%#= render 'locations/by_location/activities_by_location', location: @location
 %>
 
