--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,6 +10,7 @@
 @import "button";
 @import "calendar";
 @import "card";
+@import "carousel";
 @import "container";
 @import "dropdown";
 @import "events";
