--- a/app/views/events/show/_event_description.html.erb
+++ b/app/views/events/show/_event_description.html.erb
@@ -4,7 +4,7 @@
         <% if event.photos.attached? %>
             <div class="event-banner-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path event.photos.sample.key %>')"></div>
         <% else %>
-            <div class="event-banner-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path event.location.photo.key %>')"></div>
+            <div class="event-banner-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path event.location.photos.sample.key %>')"></div>
         <% end %>
     <!-- Placeholder! Carousel of Event Images -->
     <h4 class="title-up">EVENT DESCRIPTION</h4>
