--- a/app/views/shared/cards/_activity_card.html.erb
+++ b/app/views/shared/cards/_activity_card.html.erb
@@ -1,6 +1,6 @@
 <div class="activity-card">
   <div
-    class="photo-card"
+    class="photo-card p-2"
     style="background-image: linear-gradient(rgba(0,0,0,0.3),
       rgba(0,0,0,0.3)),
       url('<%= cl_image_path activity.photo.key %>')">
