--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,10 +1,10 @@
 <div class="main-title-width-reduced">
-    <h1 class="form-large-title">UPDATE YOUR EVENT</h1>
-    <p>Update your adventure!</p>
+    <h1 class="form-large-title">ADD TO YOUR ADVENTURE</h1>
+    <p>Add a new event!</p>
     <div class="breadcrumb">
-        <%= link_to trip_path(@event.trip) do %>
+        <%= link_to trip_path(@trip) do %>
             <i class="fas fa-angle-left"></i>
-            <%= @event.trip.title %>
+            <%= @trip.title %>
         <% end %>
     </div>
 </div>
