FIX: Add create event to trips

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -4,7 +4,7 @@
       <h4>Event details</h4>
 
       <!-- FORMS -->
-      <%= simple_form_for @event do |f| %>
+      <%= simple_form_for [@trip, @event] do |f| %>
       
         <div class="d-flex flex-column">
           <div>
