--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -13,7 +13,7 @@
 <br>
 
 <div class="featured-title container__body">
-    <h2>CHECK OUT OTHER EVENTS</h2>
+    <h2>CHECK OUT UPCOMING EVENTS</h2>
 </div>
 
 <div class="container__body d-flex justify-content-between">
