--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,6 +1,6 @@
 <div class="page-container">
   <div class="main-title">
-    <h1>Manage trips</h1>
+    <h1>Dashboard</h1>
   </div>
 
   <%= render 'dashboards/show/tabs' %>
